<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_cream_brown"
    tools:context="com.example.recipe_research.MainActivity">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/recipeFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/dark_cream_brown"
                    android:gravity="center"
                    android:onClick="showFilter"
                    android:text="@string/recipe_filter"
                    tools:ignore="RelativeOverlap" />

                <Spinner
                    android:id="@+id/spinner_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:entries="@array/tags"
                    android:gravity="center"
                    android:popupBackground="@color/light_cream_brown"
                    android:textColor="@color/dark_cream_brown" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                app:cardBackgroundColor="@color/light_cream_brown"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_food"
                    app:searchIcon="@drawable/ic_search" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:contentDescription="@string/speakableTextRefresh"
                android:src="@drawable/ic_refresh" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:backgroundTint="@color/dark_cream_brown"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>
