...
    <string name="speakableTextTimePicture">Time</string>
    <string name="spinnerInnerPlaceHolder">Dessert</string>
    <string name="spinnerPlaceHolder">Menu</string>
    <string name="all_bookmarks_del">All bookmarks deleted</string>
    <string name="dairyFree">Dairy free</string>
    <string name="glutenFree">Gluten free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="servings">Servings</string>
    <string name="minutes">Minutes</string>
    <string name="vegetarian_filter">Vegetarian</string>
    <string name="vegan_filter">Vegan</string>
    <string name="dairy_free_filter">Dairy free</string>
    <string name="gluten_free_filter">Gluten free</string>
...
