...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">


    <Button
        android:id="@+id/menuButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/sandstone_gray"
        android:onClick="showPopup"

        android:text="Choose"
...
